--- a/src/scss/modules/main/_all.scss
+++ b/src/scss/modules/main/_all.scss
@@ -1,2 +1,6 @@
 @import "./header";
+@import "./top-header";
+@import "./footer";
+@import "./bottom-header";
+@import "./details";
 @import "./main";
